--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -1,13 +1,53 @@
-.nav {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    margin-top: 10px;
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  padding: 30px;
 }
 
-.nav .icon-burger {
-  min-width: 60px;
-  height: 30px;
+.nav {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.wrapper-menu {
+  display: flex;
+  align-items: center;
+  gap: 1.3rem;
+}
+
+.icon-burger {
+  font-size: 40px;
   top: 60px;
   color: var(--h2-color);
+}
+
+.icon-nav {
+  font-size: 28px;
+  top: 60px;
+  color: var(--h2-color);
+  font-weight: 600;
+}
+
+.logo {
+  width: 200px;
+  height: auto;
+}
+
+button {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 7px 15px;
+  border-radius: 5px;
+  border: none;
+  background: var(--fifth-color);
+  cursor: pointer;
+}
+
+button img {
+  border-radius: 50%;
+  height: 35px;
 }
