--- a/src/component/sidebar/sideBar.css
+++ b/src/component/sidebar/sideBar.css
@@ -7,8 +7,8 @@
   position: fixed;
   height: 100%;
   width: 300px;
-  background-color: var(--primary-color);
-  border-left: 10px solid var(--primary-color);
+  background-color: var(--secondary-color);
+  border-left: 10px solid var(--secondary-color);
   transition: 0.5s;
   overflow: hidden;
 }
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.2rem;
-  margin-top: 20px;
+  margin-top: 28px;
 }
 
 .navigation ul li {
@@ -42,6 +42,7 @@
 .navigation ul li a {
   display: flex;
   align-items: center;
+  gap:0.5rem;
   width: 100%;
   text-decoration: none;
   color: #fff;
@@ -49,7 +50,7 @@
 }
 
 .navigation ul li:hover a {
-  color: var(--primary-color);
+  color: var(--secondary-color);
 }
 
 .navigation ul li:hover a::before {
