--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -28,37 +28,56 @@
 }
 
 .global-ca {
-  grid-area: 1 / 2 / 2 / 3;
-  border-bottom: 2px solid black;
-  background-color: rgb(191, 191, 191);
+  grid-area: 1 / 1 / 2 / 2;
+  background-color: rgb(245, 245, 245);
   height: auto;
   border-radius: 10px;
-  padding: 10px;
+  padding: 15px 20px;
+}
+
+.global-ca:hover {
+  box-shadow: 0px 4px 7px 0px #d8d8d8;
 }
 
 .orders-number {
-  grid-area: 1 / 3 / 2 / 4;
-  border-bottom: 2px solid black;
-  border-bottom: 2px solid black;
-  background-color: rgb(191, 191, 191);
+  grid-area: 1 / 2 / 2 / 3;
+  background-color: rgb(245, 245, 245);
   height: auto;
   border-radius: 10px;
-  padding: 10px;
+  padding: 15px 20px;
+}
+
+.orders-number:hover {
+  box-shadow: 0px 4px 7px 0px #d8d8d8;
 }
 
 .conversion-rate {
-  grid-area: 1 / 4 / 2 / 5;
-  border-bottom: 2px solid black;
-  background-color: rgb(191, 191, 191);
+  grid-area: 1 / 3 / 2 / 4;
+  background-color: rgb(245, 245, 245);
   height: auto;
   border-radius: 10px;
-  padding: 10px;
+  padding: 15px 20px;
+}
+
+.conversion-rate:hover {
+  box-shadow: 0px 4px 7px 0px #d8d8d8;
+}
+
+.duration-average {
+  grid-area: 1 / 4 / 2 / 5;
+  background-color: rgb(245, 245, 245);
+  height: auto;
+  border-radius: 10px;
+  padding: 15px 20px;
+}
+
+.duration-average:hover {
+  box-shadow: 0px 4px 7px 0px #d8d8d8;
 }
 
 .ca-brand {
   grid-area: 2 / 3 / 6 / 5;
-  border-bottom: 2px solid black;
-  background-color: rgb(191, 191, 191);
+  background-color: rgb(245, 245, 245);
   height: auto;
   border-radius: 10px;
   padding: 10px;
@@ -66,8 +85,7 @@
 
 .ca-visitor {
   grid-area: 2 / 1 / 4 / 3;
-  border-bottom: 2px solid black;
-  background-color: rgb(191, 191, 191);
+  background-color: rgb(245, 245, 245);
   height: auto;
   border-radius: 10px;
   padding: 10px;
@@ -75,7 +93,6 @@
 
 .array {
   grid-area: 4 / 1 / 6 / 3;
-  border-bottom: 2px solid black;
   background-color: rgb(191, 191, 191);
   height: 100%;
   border-radius: 10px;
@@ -83,9 +100,10 @@
 }
 
 .icon-charts {
-    display: flex;
-    justify-content: flex-end;
-    font-size: 40px;
-    top: 60px;
-    color: var(--h2-color);
-  }
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 12px;
+  font-size: 35px;
+  top: 60px;
+  color: var(--secondary-color);
+}
