--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -79,24 +79,44 @@
   grid-area: 2 / 3 / 6 / 5;
   background-color: rgb(245, 245, 245);
   height: auto;
+  overflow: hidden;
   border-radius: 10px;
   padding: 10px;
+}
+
+.ca-brand:hover {
+  box-shadow: 0px 4px 7px 0px #d8d8d8;
 }
 
 .ca-visitor {
   grid-area: 2 / 1 / 4 / 3;
   background-color: rgb(245, 245, 245);
-  height: auto;
+  height: 100%;
   border-radius: 10px;
+  overflow: hidden;
   padding: 10px;
+}
+
+.ca-visitor:hover {
+  box-shadow: 0px 4px 7px 0px #d8d8d8;
 }
 
 .array {
   grid-area: 4 / 1 / 6 / 3;
-  background-color: rgb(191, 191, 191);
-  height: 100%;
+  background-color: rgb(245, 245, 245);
   border-radius: 10px;
+  overflow: hidden;
   padding: 10px;
+}
+
+.canvas {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.array:hover {
+  box-shadow: 0px 4px 7px 0px #d8d8d8;
 }
 
 .icon-charts {
